--- a/requirements.txt
+++ b/requirements.txt
@@ -12,19 +12,18 @@ better-profanity==0.7.0
 certifi==2020.12.5
 chardet==3.0.4
 colorama==0.4.4
-discord-buttons==0.5
 discord-components==1.0.0
 discord-ext-menus
 discord-py-slash-command==2.0.4
 discord.py==1.6.0
-googletrans==3.1.0a0
+googletrans
 h11==0.9.0
 h2==3.2.0
 heroku==0.1.4
 hpack==3.0.0
 hstspreload==2020.12.22
-httpcore==0.9.1
-httpx==0.13.3
+httpcore
+httpx
 hyperframe==5.2.0
 idna==2.10
 instant-api-client==0.1.2
